--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vie-cli-templat",
+  "name": "vue-cli-templete",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,12 +13,23 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
+    "@babel/eslint-parser": "^7.17.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/eslint-config-airbnb": "^6.0.0",
+    "@vue/eslint-config-standard": "^6.1.0",
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vuejs-accessibility": "^1.1.0",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^12.6.0",
+    "vue-router": "^4.0.14"
   },
   "eslintConfig": {
     "root": true,
@@ -27,7 +38,9 @@
     },
     "extends": [
       "plugin:vue/vue3-essential",
-      "eslint:recommended"
+      "eslint:recommended",
+      "@vue/standard",
+      "@vue/airbnb"
     ],
     "parserOptions": {
       "parser": "@babel/eslint-parser"
